--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Encerrado -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La partida de go -->
+<li>
+  <a href="../Peliculas/pelicula927.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/99XUkLH31ArJYf4fqGmu9pmA00u.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La partida de go 2025</span>
+    <span class="hidden">Es la historia de dos legendarios jugadores de Go, Cho Hun-hyun y su protegido y futuro rival Lee Chang-ho.</span>
+  </a>
+</li>
+<!--FIN--><!-- Encerrado -->
 <li>
   <a href="../Peliculas/pelicula926.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
