--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Winnie Pooh: Nuevas aventuras con Rito -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un Angel en Nuestras Vidas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula932.html">
+    <img src="https://image.tmdb.org/t/p/original/yfnJ5qIYx7q33fY4jqv9Pu95RSg.jpg" alt="Un Ángel en Nuestras Vidas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un Ángel en Nuestras Vidas</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Winnie Pooh: Nuevas aventuras con Rito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula929.html">
     <img src="https://image.tmdb.org/t/p/original/qTCvI3AXpritP3fCHo7TcJkIbzM.jpg" alt="Winnie Pooh: Nuevas aventuras con Rito" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
