--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Heroe Por Encargo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un Angel en Nuestras Vidas -->
+<li>
+  <a href="../Peliculas/pelicula932.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/yfnJ5qIYx7q33fY4jqv9Pu95RSg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un Ángel en Nuestras Vidas 2020</span>
+    <span class="hidden">Las segundas oportunidades comienzan cuando un criminal endurecido se cruza con una niña precoz a la que un ángel ayuda a cambiar de corazón durante la temporada navideña.</span>
+  </a>
+</li>
+<!--FIN--><!-- Heroe Por Encargo -->
 <li>
   <a href="../Peliculas/pelicula931.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
