--- a/Categorias/serie/index.html
+++ b/Categorias/serie/index.html
@@ -49,7 +49,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Monstruo: La historia de Ed Gein -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Task -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie104.html">
+    <img src="https://image.tmdb.org/t/p/original/3ZSskZW7Ls5FARdhrLKGcF9lWjE.jpg" alt="Task" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Task</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Monstruo: La historia de Ed Gein -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie103.html">
     <img src="https://image.tmdb.org/t/p/original/2RVFksm4DF17XZSXMVbNh1qDSOr.jpg" alt="Monstruo: La historia de Ed Gein" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
