--- a/Series/serie105.html
+++ b/Series/serie105.html
@@ -70,7 +70,7 @@ body::after {
   </div>
   <div class="flex space-x-2 overflow-x-auto scrollbar-hide pb-1" id="lista-capitulos"></div>
   <div class="bg-[#1e1e1e] rounded-lg p-4 text-sm text-gray-300 leading-relaxed">
-    <p><span class="font-semibold text-white">Sinopsis:</span> </p>
+    <p><span class="font-semibold text-white">Sinopsis:</span>Carlos y Álvaro son dos internos recién llegados a un centro correccional de menores situado junto al mar. Mientras cumplen su condena tendrán que hacer frente a las amenazas de la banda de Los Pajaritos y ser capaces de mantener la esperanza en un futuro que cada vez ven más oscuro. Pero allí dentro también encontrarán el apoyo de internos como Saray, una joven que prefiere vivir en el centro antes que volver a su problemática vida en el exterior, o de trabajadores como Mario, un hombre implicado con la reinserción de los internos que llegará a poner en peligro su propia vida por ayudar a estos chicos. </p>
   </div>
 </div>
 <script>
