--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Telma: La Unicornio -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Pantera Negra -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula963.html">
+    <img src="https://image.tmdb.org/t/p/original/lAPzezdc5E6DFnttJwCWXZ9A9C6.jpg" alt="Pantera Negra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Pantera Negra</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- Telma: La Unicornio -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula962.html">
     <img src="https://image.tmdb.org/t/p/original/ohuki9saKOCtaKH72VBz5gx54tZ.jpg" alt="Telma: La Unicornio" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
