--- a/index.html
+++ b/index.html
@@ -416,8 +416,7 @@ document.addEventListener("DOMContentLoaded", async () => {
       </div>
 
 </main>
-	  <!-- Notificación Nueva Peli/Serie -->
-<div id="lzNotifOverlay"></div>
+	<!-- Notificación Nueva Peli/Serie -->
 <div id="lzNotif" style="position:fixed;top:-200px;left:50%;transform:translateX(-50%);width:95%;max-width:400px;background:rgba(0,25,80,0.85);backdrop-filter:blur(10px);border:2px solid #0066ff;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.5);padding:12px;display:flex;align-items:center;gap:12px;z-index:999;opacity:0;transition:top 0.5s ease,opacity 0.5s ease;">
   
   <img id="lzNotifImg" src="https://image.tmdb.org/t/p/original/4trVWELLpLioJYoACiWUmEJf38d.jpg" alt="" style="width:80px;height:80px;object-fit:cover;border-radius:8px;flex-shrink:0;border:2px solid rgba(255,255,255,0.2);">
@@ -433,22 +432,18 @@ document.addEventListener("DOMContentLoaded", async () => {
 </div>
 
 <script>
+  var notif = document.getElementById("lzNotif");
+
   // Mostrar notificación al cargar
   window.addEventListener("load", function() {
-    var notif = document.getElementById("lzNotif");
-    var overlay = document.getElementById("lzNotifOverlay");
-    overlay.style.position = "fixed";
-    overlay.style.top = "0";
-    overlay.style.left = "0";
-    overlay.style.width = "100%";
-    overlay.style.height = "100%";
-    overlay.style.display = "block";
-    overlay.style.zIndex = "998";
-    overlay.style.background = "transparent";
-
     notif.style.top = "10px";
     notif.style.opacity = "1";
 
+    // Cerrar automáticamente después de 4 segundos
+    setTimeout(function() {
+      notif.style.top = "-200px";
+      notif.style.opacity = "0";
+    }, 4000);
   });
 
   // Acción "Ver ahora"
@@ -457,18 +452,10 @@ document.addEventListener("DOMContentLoaded", async () => {
   });
 
   // Botón cerrar (X)
-  document.getElementById("lzNotifClose").addEventListener("click", cerrarNotif);
-
-  // Cerrar clic fuera
-  document.getElementById("lzNotifOverlay").addEventListener("click", cerrarNotif);
-
-  function cerrarNotif() {
-    var notif = document.getElementById("lzNotif");
-    var overlay = document.getElementById("lzNotifOverlay");
+  document.getElementById("lzNotifClose").addEventListener("click", function() {
     notif.style.top = "-200px";
     notif.style.opacity = "0";
-    overlay.style.display = "none";
-  }
+  });
 </script>
 <footer class="bg-[#081423] text-white mt-12">
   <div class="max-w-6xl mx-auto px-4 py-8 grid grid-cols-1 sm:grid-cols-3 gap-6">
@@ -791,14 +778,5 @@ document.addEventListener("DOMContentLoaded", async () => {
   }
 });
 </script>
-
 </body>
 </html>
-
-
-
-
-
-
-
-
