--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Extraordinario -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- 13 fantasmas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula965.html">
+    <img src="https://image.tmdb.org/t/p/original/tobmCmAgCNVhqxUN7r58cnoYOco.jpg" alt="13 fantasmas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">13 fantasmas</div>
+  <div class="text-xs text-white/70">2001</div>
+</article><!-- Extraordinario -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula964.html">
     <img src="https://image.tmdb.org/t/p/original/wowB0C4S5KX5SNbhGMkbZZEOqCR.jpg" alt="Extraordinario" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
