--- a/Categorias/romance/index.html
+++ b/Categorias/romance/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Despues del apocalipsis -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El hilo rojo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula968.html">
+    <img src="https://image.tmdb.org/t/p/original/mZ8Z4jCDVlBflEuCOwH3NCDyqBP.jpg" alt="El hilo rojo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El hilo rojo</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Despues del apocalipsis -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula956.html">
     <img src="https://image.tmdb.org/t/p/original/xnvFRg5TxGYIMKQJjA41lv0RNcg.jpg" alt="Después del apocalipsis" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
