--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- La pelicula de Tigger -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story: Vida de lampara -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie39.html">
+    <img src="https://image.tmdb.org/t/p/original/kBIkCS3PQlHY86agofKY411jLM7.jpg" alt="Toy Story: Vida de lámpara" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Toy Story: Vida de lámpara</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- La pelicula de Tigger -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie37.html">
     <img src="https://image.tmdb.org/t/p/original/zMEky5WS29EjnmeSXvSm4YATV2R.jpg" alt="La película de Tigger" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
