--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story: Vida de lampara -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story Toons: Vacaciones en Hawaii -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie40.html">
+    <img src="https://image.tmdb.org/t/p/original/zK0tA15d6Ltr1FK7sEXv9zIpzEJ.jpg" alt="Toy Story Toons: Vacaciones en Hawaii" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Toy Story Toons: Vacaciones en Hawaii</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- Toy Story: Vida de lampara -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie39.html">
     <img src="https://image.tmdb.org/t/p/original/kBIkCS3PQlHY86agofKY411jLM7.jpg" alt="Toy Story: Vida de lámpara" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
