--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story: Vida de lampara -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story Toons: Vacaciones en Hawaii -->
+<li>
+  <a href="../Peliculas/movie40.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zK0tA15d6Ltr1FK7sEXv9zIpzEJ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story Toons: Vacaciones en Hawaii 2011</span>
+    <span class="hidden">Ken calcula muy mal los preparativos para unas vacaciones, por lo que Woody y Buzz lideran a un grupo de juguetes para que Ken y Barbie tengan las vacaciones hawaianas de sus sueños.</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story: Vida de lampara -->
 <li>
   <a href="../Peliculas/movie39.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
