--- a/Plataforma/disney/index.html
+++ b/Plataforma/disney/index.html
@@ -190,7 +190,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story Toons: Pequeno Gran Buzz -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story Toons: Fiesta Saurus Rex -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie42.html">
+    <img src="https://image.tmdb.org/t/p/original/6AVL53Y4o1W2zkSuP1dDrMw0KoP.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Toy Story Toons: Fiesta Saurus Rex</div>
+  <div class="text-xs text-white/70">2012</div>
+</article><!-- Toy Story Toons: Pequeno Gran Buzz -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie41.html">
     <img src="https://image.tmdb.org/t/p/original/fyLKw1MzdpBsYtZxESLf4xqSSvR.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
