--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story Toons: Fiesta Saurus Rex -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story: Olvidados en el Tiempo -->
+<li>
+  <a href="../Peliculas/movie43.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3m8SkdSzWOkNodITnuqXCGaIdFG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story: Olvidados en el Tiempo 2014</span>
+    <span class="hidden">Es una cita de juego post-Navidad y los juguetes tienen que enfrentarse a los temibles y agresivos nuevos juguetes de dinosaurio.</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story Toons: Fiesta Saurus Rex -->
 <li>
   <a href="../Peliculas/movie42.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
