--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los increibles 2 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Jose: El Rey de los Suenos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie68.html">
+    <img src="https://image.tmdb.org/t/p/original/A4Xa0kKzsGE8Tl6X2QARdhsAtUg.jpg" alt="José: El Rey de los Sueños" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">José: El Rey de los Sueños</div>
+  <div class="text-xs text-white/70">2002</div>
+</article><!-- Los increibles 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie67.html">
     <img src="https://image.tmdb.org/t/p/original/bJjc0217DuipdwJ0wyi3I4j6soR.jpg" alt="Los increíbles 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
