--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los increibles 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Jose: El Rey de los Suenos -->
+<li>
+  <a href="../Peliculas/movie68.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/A4Xa0kKzsGE8Tl6X2QARdhsAtUg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">José: El Rey de los Sueños 2002</span>
+    <span class="hidden">Con su don de la interpretación de los sueños y su abrigo de colores brillantes, José inspira celos en sus hermanos y es vendido como esclavo. Esta narración animada de la historia del libro de Génesis de la Biblia cuenta con animación de primera clase y un trabajo de voz excelente, con Ben Affleck, Mark Hamill y Jody Benson. Sano y sin sermonear, José: Rey de los sueños hará las delicias de toda la familia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los increibles 2 -->
 <li>
   <a href="../Peliculas/movie67.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
