--- a/Plataforma/cinecristiano/index.html
+++ b/Plataforma/cinecristiano/index.html
@@ -53,7 +53,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- La pasion de Cristo -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Jose: El Rey de los Suenos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie68.html">
+    <img src="https://image.tmdb.org/t/p/original/A4Xa0kKzsGE8Tl6X2QARdhsAtUg.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">José: El Rey de los Sueños</div>
+  <div class="text-xs text-white/70">2002</div>
+</article><!-- La pasion de Cristo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula997.html">
     <img src="https://image.tmdb.org/t/p/original/qPSyfz3yzTHXh1s8KRNy5YMNQJL.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
