--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Jose: El Rey de los Suenos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Camino a Belen -->
+<li>
+  <a href="../Peliculas/movie69.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/w6TNNt60ftQ4lsh69awxy5Iiwvd.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Camino a Belén 2023</span>
+    <span class="hidden">Esta aventura musical navideña de acción en vivo para toda la familia entrelaza melodías navideñas clásicas con humor, fe y nuevas canciones pop en una narración de la historia más grande jamás contada: la historia de María y José y el nacimiento de Jesús.</span>
+  </a>
+</li>
+<!--FIN--><!-- Jose: El Rey de los Suenos -->
 <li>
   <a href="../Peliculas/movie68.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
