--- a/Peliculas/pelicula894.html
+++ b/Peliculas/pelicula894.html
@@ -49,7 +49,7 @@
     <div class="overlay min-h-screen">
         <div class="max-w-4xl mx-auto p-4 pb-24">
             <div class="rounded-md overflow-hidden relative aspect-video bg-black">
-                <iframe class="w-full h-full" src="https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=1Y4JuyBreOoeC4B3Q-cG70JO5pWrKncat" data-alternativo="https://streamwish.to/e/032kbvuhzh9y" title="" frameborder="0" allowfullscreen></iframe>
+                <iframe class="w-full h-full" src="https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9odWdoLmNkbi5ydW1ibGUuY2xvdWQvdmlkZW8vZndlMi83ZC9zOC8yL3kvRy95L28veUd5b3ouYWFhLm1wNA==&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvd0MzNnRFVTdBcVA1bGxBdmpYa1poWjI0OHRYLmpwZw==&title=Um9ja3k=" data-alternativo="https://streamwish.to/e/032kbvuhzh9y" title="" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="flex space-x-4 mt-4 bg-[#1a1a1a] p-4 rounded-md items-center">
                 <div class="flex items-center justify-center w-[110px] h-[160px] flex-shrink-0">
