--- a/Peliculas/pelicula896.html
+++ b/Peliculas/pelicula896.html
@@ -49,7 +49,7 @@
     <div class="overlay min-h-screen">
         <div class="max-w-4xl mx-auto p-4 pb-24">
             <div class="rounded-md overflow-hidden relative aspect-video bg-black">
-                <iframe class="w-full h-full" src="https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=1iPcdLeAJ6hwTSbdNeAJEWgzAeQXP8zGb" data-alternativo="https://streamwish.to/e/1nlv5usq7fb3" title="" frameborder="0" allowfullscreen></iframe>
+                <iframe class="w-full h-full" src="https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md2UyLzdmL3M4LzIvSy9FL3kvby9LRXlvei5hYWEubXA0&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvOVU0RGk5aU9zbHozZUo5ZVJrZGc1UXJmOUpZLmpwZw==&title=Um9ja3kgSUlJ" data-alternativo="https://streamwish.to/e/1nlv5usq7fb3" title="" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="flex space-x-4 mt-4 bg-[#1a1a1a] p-4 rounded-md items-center">
                 <div class="flex items-center justify-center w-[110px] h-[160px] flex-shrink-0">
